<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>nl.pim16aap2.bigdoors</groupId>
    <artifactId>bigdoors-parent</artifactId>

    <packaging>pom</packaging>
    <version>1</version>
    <name>BigDoors</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lombok.encoding>UTF-8</lombok.encoding>
        <maven.compiler.release>16</maven.compiler.release>

        <lombok.inputDir>${project.basedir}</lombok.inputDir>
        <lombok.outputDir>${project.build.directory}/generated-sources/delombok</lombok.outputDir>
        <src.dir>${basedir}/src/main/java</src.dir>

        <dependency.version.jcalculator>1.7</dependency.version.jcalculator>
        <dependency.version.annotations>20.1.0</dependency.version.annotations>
        <dependency.version.lombok>1.18.20</dependency.version.lombok>
        <dependency.version.errorprone>2.7.0</dependency.version.errorprone>
        <dependency.version.mockito>3.10.0</dependency.version.mockito>
        <dependency.version.junit>5.8.0-M1</dependency.version.junit>
        <dependency.version.surefire>3.0.0-M5</dependency.version.surefire>
        <dependency.version.jacoco>0.8.7</dependency.version.jacoco>
        <dependency.version.maven-compiler>3.8.1</dependency.version.maven-compiler>
        <dependency.version.maven-shade>3.3.0-SNAPSHOT</dependency.version.maven-shade>
        <dependency.version.maven-jar>3.2.0</dependency.version.maven-jar>
        <dependency.version.jdbc-sqlite>3.34.0</dependency.version.jdbc-sqlite>
    </properties>

    <modules>
        <module>bigdoors-core</module>
        <module>bigdoors-spigot</module>
        <module>bigdoors-doors</module>
        <module>bigdoors-integration-test</module>
    </modules>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.github.PimvanderLoos</groupId>
                <artifactId>JCalculator</artifactId>
                <version>${dependency.version.jcalculator}</version>
                <scope>compile</scope>
                <optional>true</optional>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${dependency.version.annotations}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${dependency.version.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${dependency.version.junit}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${dependency.version.mockito}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${dependency.version.mockito}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${dependency.version.lombok}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_annotations</artifactId>
            <version>${dependency.version.errorprone}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>${src.dir}</sourceDirectory>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${dependency.version.surefire}</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                        <trimStackTrace>false</trimStackTrace>
                        <useFile>false</useFile>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${dependency.version.maven-shade}</version>
                    <configuration>
                        <relocations>
                            <relocation>
                                <pattern>org.bstats</pattern>
                                <shadedPattern>nl.pim16aap2.bigdoors.lib.bstats</shadedPattern>
                            </relocation>
                            <relocation>
                                <pattern>nl.pim16aap2.jcalculator</pattern>
                                <shadedPattern>nl.pim16aap2.bigdoors.lib.jcalculator</shadedPattern>
                            </relocation>
                            <relocation>
                                <pattern>com.google.errorprone</pattern>
                                <shadedPattern>nl.pim16aap2.bigdoors.lib.errorprone</shadedPattern>
                            </relocation>
                        </relocations>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${dependency.version.jacoco}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>${dependency.version.maven-compiler}</version>
                            <configuration>
                                <compilerArgs>--enable-preview</compilerArgs>
                                <encoding>UTF-8</encoding>
                                <release>${maven.compiler.release}</release>
                                <annotationProcessorPaths>
                                    <path>
                                        <groupId>org.projectlombok</groupId>
                                        <artifactId>lombok</artifactId>
                                        <version>${dependency.version.lombok}</version>
                                    </path>
                                </annotationProcessorPaths>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>

        <profile>
            <id>errorprone</id>

            <properties>
                <src.dir>${lombok.outputDir}</src.dir>
            </properties>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-maven-plugin</artifactId>
                            <version>1.18.20.0</version>
                            <executions>
                                <execution>
                                    <phase>generate-sources</phase>
                                    <goals>
                                        <goal>delombok</goal>
                                    </goals>
                                </execution>
                            </executions>
                            <configuration>
                                <sourceDirectory>src/main/java</sourceDirectory>
                                <formatPreferences>
                                    <generateDelombokComment>skip</generateDelombokComment>
                                    <javaLangAsFQN>skip</javaLangAsFQN>
                                    <suppressWarnings>skip</suppressWarnings>
                                </formatPreferences>
                            </configuration>
                        </plugin>

                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>${dependency.version.maven-compiler}</version>

                            <configuration>
                                <encoding>UTF-8</encoding>
                                <fork>true</fork>
                                <release>${maven.compiler.release}</release>
                                <compilerArgs>
                                    <arg>--enable-preview</arg>
                                    <arg>-XDcompilePolicy=simple</arg>
                                    <arg>-Xplugin:ErrorProne -Xep:JavaLangClash -Xep:SameNameButDifferent</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                                </compilerArgs>
                                <annotationProcessorPaths>
                                    <path>
                                        <groupId>com.google.errorprone</groupId>
                                        <artifactId>error_prone_core</artifactId>
                                        <version>${dependency.version.errorprone}</version>
                                    </path>
                                </annotationProcessorPaths>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>
